# bank

./: .env.example  README.md  main.py  pyproject.toml
src/: decorators.py  generators.py  masks.py  processing.py  transactions_pandas.py  utils.py  widget.py
tests/: test_decorators.py  test_generators.py  test_masks.py  test_processing.py  test_transactions_pandas.py  test_utils.py  test_widget.py
